# Langchain-Logseq

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  pyvenv.cfg  requirements-dev.txt
integ-tests/: .env.example  README.md  conftest.py  test_integ_journal_date_range_retriever.py  test_integ_pgvector_journal_retriever.py  test_journals  test_pgvector_corpus_manager.py
integ-tests/utils/: api_bedrock.py  bedrock_embedder.py  logging.py  pgvector_document_service.py
langchain_logseq/loaders/: __init__.py  logseq_journal_filesystem_loader.py  logseq_journal_loader_input.py
langchain_logseq/models/: journal_pgvector.py  journal_pgvector_template.py
langchain_logseq/retrievers/: __init__.py  contextualizer.py  journal_date_range_retriever.py
langchain_logseq/uploaders/: journal_corpus_manager.py
langchain_logseq/uploaders/pgvector/: journal_corpus_manager.py
logseq_retriever/loaders/: __init__.py  journal_document_metadata.py  journal_filesystem_loader.py  journal_loader.py  journal_loader_input.py
logseq_retriever/models/: __init__.py  journal_pgvector.py
logseq_retriever/retrievers/: __init__.py  contextualizer.py  journal_date_range_retriever.py  journal_retriever.py  pgvector_journal_retriever.py
logseq_retriever/uploaders/pgvector/: __init__.py  journal_corpus_manager.py
scripts/: .env.example  upload_journal_to_pgvector.py
scripts/pgvector_utils/: .env.example  db_util.py
scripts/utils/: .env.example  api_bedrock.py  bedrock_embedder.py  logging.py
tests/loaders/: test_logseq_journal_filesystem_loader.py  test_logseq_journal_loader_input.py
tests/loaders/test_journals/: 2025_03_27.md  2025_03_28.md  2025_03_29.md  2025_04_15.md  2025_07_09.md
tests/models/: test_journal_search_query.py
tests/retrievers/: test_contextualizer.py  test_journal_date_range_retriever.py  test_pgvector_journal_retriever.py
tests/uploaders/pgvector/: test_journal_corpus_manager.py
