[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-logseq"
version = "0.1.0"
description = "LangChain helpers for working with Logseq documents"
authors = [{ name="DL", email="v49t9zpqd@mozmail.com" }]
license = { text = "MIT" }
dependencies = [
    "langchain>=0.3.24",
    "pydantic>=2.11.4",
]

[tool.setuptools.packages.find]
where = ["langchain_logseq"]